--- a/html.index.html
+++ b/html.index.html
@@ -10,7 +10,9 @@
 <p>This example requires you to enter commands in your browser's JavaScript console (see <a href="https://developer.mozilla.org/en-US/docs/Learn/Common_questions/What_are_browser_developer_tools">What are browser developer tools</a> for more information).</p>
 
 
-
+<script src="person.js"></script>
+<script src="teacher.js"></script>
+<script src="student.js"></script>
 <script src="oop.js"></script>
 </body>
 </html>
